fix spacing of alert container so it no longer displaces other elements

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,6 +32,7 @@ html {
 
 #alert-container {
     margin-top: 20px;
+    height: 60px;
 }
 
 #landing-page-content {
@@ -76,7 +77,7 @@ html {
 }
 
 .task-list-header {
-    margin: 100px auto;
+    margin: 40px auto;
     margin-bottom: 0;
     background: #2f333d;
     width: 460px;
